--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center>
 <h2><font color=yellow>Hello, world!</font></h2>
 
-<font color=green>www.popov.net</font>
+<font color=blue>www.popov.net</font>
 
 </center>
 </body>
